Fixed header gap

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ h1 {
 
 header {
   background-color: #fff;
-  padding: 5px 50px;
+  padding: 4px 50px;
   overflow: hidden;
 }
 
